# SWIMVPN-

./: .dockerignore  .env.example  .gitignore  AGENTIC DEPLOYMENT RULES — STRICT EXECUT.md  AGENTS.md  ANDROID_EXECUTION_STATUS.md  AUDIT_UPDATE_VPN_2026-05.md  BACKEND_ARCHITECTURE_AND_ROADMAP.md  DECISIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile.landing  IMPLEMENTATION_REGRESSION_REVIEW.md  README.md  README_DEV.md  TODO.md  WORKLOG.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/release/release/: output-metadata.json
android/app/release/release/baselineProfiles/0/: app-release.dm
android/app/release/release/baselineProfiles/1/: app-release.dm
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: tun2socks_jni.c
android/app/src/main/res/drawable/: ic_crypto_pay_mark.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_plan_basic_medal.xml  ic_plan_platinum_diamond.xml  ic_plan_premium_sparkles.xml  ic_shark_logo.xml  ic_splash_transparent.xml  ic_stat_swimvpn.xml  ic_swimpay_mark.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/res/drawable/: ic_shark_logo.xml
(+433 files in other folders)
